# moltbook-safety

./: .gitignore  ELT_moltbook.py  ETL_moltbook.py  README.md  arquitectura-ELT-cloud  glue_entrypoint.py  glue_job_script.py  main.tex  package_for_glue.py  package_for_glue.sh  package_for_s3.py  pyproject.toml  schema.sql  schema_postgres.sql  test_glue_local.py
.claude/: settings.local.json
app/: __main__.py
config/: __init__.py  selectors.py  settings.py
document/: Arquitectura en AWS.docx  clasification_texto_plano_solo_texto.txt  er_diagram_XML.txt  main (1).tex  main.tex  main2 (1).tex  main3.tex  moltbook_oracle_ddl.sql
notebooks/: pipeline.ipynb  pipeline_comented.ipynb
src/: __init__.py
src/database/: __init__.py  connection.py  models.py  operations.py
src/models/: __init__.py  optimizer.py  trainer.py
src/processing/: __init__.py  gold.py  silver.py  spark_analysis.py
src/scraper/: __init__.py  async_base.py  async_scrapers.py  base.py  discovery.py  fetcher_requests.py  parsers.py  scrapers.py
tests/: test_database.py  test_parsers.py
tests/fixtures/: submolt_page.html  user_profile.html  users_list.html
