[project]
name = "moltbook-karma"
version = "0.1.0"
description = "Data engineering pipeline for moltbook.com karma prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
    "pyspark>=3.5.0",
    "psycopg2-binary>=2.9.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.28.0",
    "h2o>=3.44.0",
    "pyarrow>=14.0.0",
    "click>=8.1.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
moltbook = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
